--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         name = 'Пётр1';
 
         //4
-        
-        var name = prompt('Ну и как тебя зовут?', '');
-        alert('имя)');
+
+        var name = prompt("Ну и кто тут у нас?", "");
+        alert(name);
 
     </script>
 
